<resources>
    <string name="app_name">MPT</string>
    <string name="title_activity_main">题库</string>
    <string name="title_activity_user_img">头像</string>
    <string name="bottom_title_home">主页</string>
    <string name="bottom_title_add">出题</string>
    <string name="bottom_title_account">我的</string>
    <string name="drawer_title_account">账户编辑</string>
    <string name="drawer_title_test_record">考试记录</string>
    <string name="drawer_title_setting">设置</string>
    <string name="drawer_title_day">白天模式</string>
    <string name="drawer_title_night">夜间模式</string>
    <string name="drawer_title_logout">退出登陆</string>
    <string name="drawer_title_exit">退出应用</string>
    <string name="drawer_header_username_default">立即登陆</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登陆</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="account">账 户</string>
    <string name="pwd">密 码</string>
    <string name="title_login">登陆</string>
    <string name="hint_account">用户名/手机号</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="phone_one_key_login">手机号注册登陆</string>
    <string name="account_login">账户登陆</string>
    <string name="phone_one_key_register">手机号注册</string>
    <string name="phone_num">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="request_code">发送验证码</string>
    <string name="hint_et_phone">请输入11位手机号</string>
    <string name="hint_et_code">请输入6位验证码</string>
    <string name="username">用户昵称</string>
    <string name="set_pwd">设置密码</string>
    <string name="set_pwd_hint">请设置密码</string>
    <string name="username_et_hint">请输入用户名</string>
    <string name="pwd_repeat">确认密码</string>
    <string name="hint_pwd_repeat">请再次输入密码</string>
    <string name="new_password">新密码</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_ass_phone">请输入您账户关联的手机号</string>
    <string name="reset_pwd">重置密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="unbind_phone">解绑手机号</string>
    <string name="SMS_template">SignIn</string>
    <string name="next">下一步</string>
    <string name="update_phone_num">修改手机号</string>
    <string name="file_provider_authorities">com.dh.exam.mpt.provider</string>
    <string name="sheet_dialog_title">选择图片</string>
    <string name="sheet_dialog_item">从相册选择</string>
    <string name="sheet_dialog_save">保存到本地</string>
    <string name="permission_title_rationale">需要权限</string>
    <string name="label_ok">确定</string>
    <string name="label_cancel">取消</string>
    <string name="permission_read_storage">显示图片需要读外部存储权限</string>
    <string name="permission_read_storage_rationale">选择图片需要读外部存储权限</string>
    <string name="permission_write_storage_rationale">保存图片需要写外部存储权限</string>
    <string name="label_select_picture">选择图片</string>
    <string name="toast_cannot_retrieve_selected_image">选择图片失败</string>
    <string name="toast_cannot_retrieve_cropped_image">裁剪图片失败</string>
    <string name="toast_unexpected_error">异常</string>
    <string name="channel_name">UCrop通道</string>
    <string name="channel_description">ucrop结果</string>
    <string name="format_crop_result_d_d">裁剪结果 (%1$dx%2$d)</string>
    <string name="menu_item_use_save">使用</string>
    <string name="notification_image_saved">图片已保存</string>
    <string name="notification_image_saved_click_to_preview">图片已保存，点击查看</string>
    <string name="et_hint_paper_name">请输入试卷名</string>
    <string name="et_hint_paper_author">请输入作者</string>
    <string name="btn_new_paper">开始出题</string>
    <string name="fragment_title_paper_library">题库</string>
    <string name="fragment_title_new_paper">新建试卷</string>
    <string name="spinner_title">试卷类型</string>
    <string name="paper_title_null">试卷名不能为空</string>
    <string name="new_paper_fail">新建试卷失败</string>
    <string name="begin_test">开 始 考 试</string>
    <string name="a_text">A</string>
    <string name="b_text">B</string>
    <string name="c_text">C</string>
    <string name="d_text">D</string>
    <string name="candidateTag">考生:</string>
    <string name="right_answer_d">正确答案： D</string>
    <string name="right_answer_c">正确答案： C</string>
    <string name="right_answer_cd">正确答案： CD</string>
    <string name="right_answer_b">正确答案： B</string>
    <string name="right_answer_bd">正确答案： BD</string>
    <string name="right_answer_bc">正确答案： BC</string>
    <string name="right_answer_bcd">正确答案： BCD</string>
    <string name="right_answer_a">正确答案： A</string>
    <string name="right_answer_ad">正确答案： AD</string>
    <string name="right_answer_ac">正确答案： AC</string>
    <string name="right_answer_acd">正确答案： ACD</string>
    <string name="right_answer_ab">正确答案： AB</string>
    <string name="right_answer_abd">正确答案： ABD</string>
    <string name="right_answer_abc">正确答案： ABC</string>
    <string name="right_answer_abcd">正确答案： ABCD</string>
    <string name="user_answer_d">用户答案： D</string>
    <string name="user_answer_c">用户答案： C</string>
    <string name="user_answer_cd">用户答案： CD</string>
    <string name="user_answer_b">用户答案： B</string>
    <string name="user_answer_bd">用户答案： BD</string>
    <string name="user_answer_bc">用户答案： BC</string>
    <string name="user_answer_bcd">用户答案： BCD</string>
    <string name="user_answer_a">用户答案： A</string>
    <string name="user_answer_ad">用户答案： AD</string>
    <string name="user_answer_ac">用户答案： AC</string>
    <string name="user_answer_acd">用户答案： ACD</string>
    <string name="user_answer_ab">用户答案： AB</string>
    <string name="user_answer_abd">用户答案： ABD</string>
    <string name="user_answer_abc">用户答案： ABC</string>
    <string name="user_answer_abcd">用户答案： ABCD</string>
    <string name="right_answer_null">未设置标准答案</string>
    <string name="user_answer_null">用户未答此题</string>
    <string name="update_username">修改用户名</string>
    <string name="feedback">反馈</string>
    <string name="feedback_contact_hint">请输入您的邮箱</string>
    <string name="feedback_content_hint">请输入您的反馈或意见</string>
    <string name="feedback_commit">提交</string>
    <string name="new_question">添加试题</string>
    <string name="new_question_title">请编写题目题干</string>
    <string name="is_back">确定返回</string>
    <string name="new_question_back_alert_content">返回将不保存已编辑题目，您可以选择取消后提交保存，确定返回？</string>
    <string name="test_back_alert_content">返回将不会提交试卷，您可以选择取消后交卷，确定返回？</string>
    <string name="paper_info">试卷信息</string>
    <string name="testing">考试中</string>
    <string name="question_num_zero">此试卷题目数为0，无法进行考试，请反馈</string>
    <string name="test_result">考试结果</string>

</resources>
