<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!--账户登陆输入模块布局-->
    <LinearLayout
        android:id="@+id/layout_account_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#444444"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#d2d2d2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">
                    <EditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_account"
                        android:textColor="#444444"
                        android:textColorHint="@color/hint_font_color"
                        android:textSize="16sp"
                        android:background="@null"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/deepSkyBlue" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textColor="#444444"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#d2d2d2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_pwd"
                        android:inputType="textPassword"
                        android:textColor="#444444"
                        android:textColorHint="@color/hint_font_color"
                        android:textSize="16sp"
                        android:background="@null"/>
                    <TextView
                        android:id="@+id/tv_forget_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/forget_password"
                        android:textColor="@color/deepSkyBlue"
                        android:textSize="16sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/deepSkyBlue" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--手机号登陆注册输入模块布局,默认GONE-->
    <LinearLayout
        android:id="@+id/layout_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textColor="#444444"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#d2d2d2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">
                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_et_phone"
                        android:inputType="phone"
                        android:textColor="#444444"
                        android:textColorHint="@color/hint_font_color"
                        android:textSize="16sp"
                        android:background="@null"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/deepSkyBlue" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:textColor="#444444"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#d2d2d2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_et_code"
                        android:textColor="#444444"
                        android:textColorHint="@color/hint_font_color"
                        android:textSize="16sp"
                        android:background="@null"/>
                    <TextView
                        android:id="@+id/tv_request_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/request_code"
                        android:textColor="@color/deepSkyBlue"
                        android:textSize="16sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/deepSkyBlue" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_press_selector"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="16sp">
    </Button>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_login_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_one_key_login"
            android:textSize="16sp"
            android:textColor="@color/deepSkyBlue"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/deepSkyBlue"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</LinearLayout>
