<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="70dp">
        <EditText
            android:id="@+id/et_paper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:hint="@string/et_hint_paper_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="50dp">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/kind_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/paper_kind"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner_title"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_new_paper"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_btn_press_selector"
        android:text="@string/btn_new_paper"
        android:textColor="#ffffff"
        android:textSize="16sp">
    </Button>
</LinearLayout>