<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:textColor="#444444"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#d2d2d2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_et_code"
                        android:textColor="#444444"
                        android:textColorHint="@color/hint_font_color"
                        android:textSize="16sp"
                        android:background="@null"/>
                    <TextView
                        android:id="@+id/tv_request_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/request_code"
                        android:textColor="@color/deepSkyBlue"
                        android:textSize="16sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/deepSkyBlue" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_unbind_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_btn_press_selector"
        android:text="@string/unbind_phone"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:visibility="gone">
    </Button>

    <Button
        android:id="@+id/btn_next_change_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_press_selector"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:visibility="gone">
    </Button>
</LinearLayout>


